--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ dependencies:
 - base >= 4.7 && < 5
 - gloss >= 1.13 && < 1.14
 - vector >= 0.12 && < 0.13
+- MonadRandom >= 0.1 && < 0.2
 
 ghc-options:
 - -Wall
