--- a/wave-function-collapse-hs.cabal
+++ b/wave-function-collapse-hs.cabal
@@ -7,11 +7,11 @@ cabal-version: 1.12
 name:           wave-function-collapse-hs
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/wave-function-collapse-hs#readme>
-homepage:       https://github.com/githubuser/wave-function-collapse-hs#readme
-bug-reports:    https://github.com/githubuser/wave-function-collapse-hs/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2022 Author name here
+homepage:       https://github.com/Nertsal/wave-function-collapse-hs#readme
+bug-reports:    https://github.com/Nertsal/wave-function-collapse-hs/issues
+author:         Nertsal
+maintainer:     Nertsal
+copyright:      2022 Nertsal
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/wave-function-collapse-hs
+  location: https://github.com/Nertsal/wave-function-collapse-hs
 
 library
   exposed-modules:
@@ -32,7 +32,8 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      MonadRandom ==0.1.*
+    , base >=4.7 && <5
     , gloss ==1.13.*
     , vector ==0.12.*
   default-language: Haskell2010
@@ -45,7 +46,8 @@ executable wave-function-collapse-hs-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      MonadRandom ==0.1.*
+    , base >=4.7 && <5
     , gloss ==1.13.*
     , vector ==0.12.*
     , wave-function-collapse-hs
@@ -60,7 +62,8 @@ test-suite wave-function-collapse-hs-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      MonadRandom ==0.1.*
+    , base >=4.7 && <5
     , gloss ==1.13.*
     , vector ==0.12.*
     , wave-function-collapse-hs
