--- a/package.yaml
+++ b/package.yaml
@@ -23,6 +23,7 @@ dependencies:
 - gloss >= 1.13 && < 1.14
 - vector >= 0.12 && < 0.13
 - MonadRandom >= 0.1 && < 0.2
+- gloss-juicy >= 0.2 && < 0.3
 
 ghc-options:
 - -Wall
