--- a/stack.yaml
+++ b/stack.yaml
@@ -43,6 +43,7 @@ packages:
 extra-deps:
 - MonadRandom-0.1.13@sha256:69bb1f7979c96aa76e3adaa91785d39e9e8a4855d96ef805e31e5dfd2ceecc15,855
 - random-1.1@sha256:7b67624fd76ddf97c206de0801dc7e888097e9d572974be9b9ea6551d76965df,1777
+- gloss-juicy-0.2.3@sha256:0c3bca95237cbf91f8b3b1936a0661f1e0457acd80502276d54d6c5210f88b25,1618
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
