--- a/package.yaml
+++ b/package.yaml
@@ -24,6 +24,9 @@ dependencies:
 - vector >= 0.12 && < 0.13
 - MonadRandom >= 0.1 && < 0.2
 - gloss-juicy >= 0.2 && < 0.3
+- aeson >= 1.5 && < 1.6
+- bytestring >= 0.10 && < 0.11
+- containers >= 0.6 && < 0.7
 
 ghc-options:
 - -Wall
