Rename Gris to WFC (Wave functon collapse)

--- a/wave-function-collapse-hs.cabal
+++ b/wave-function-collapse-hs.cabal
@@ -29,9 +29,9 @@ library
       Lib.Assets
       Lib.Constants
       Lib.Direction
-      Lib.Grid
       Lib.Tile
       Lib.Types
+      Lib.WFC
       Lib.World
   other-modules:
       Paths_wave_function_collapse_hs
