--- a/package.yaml
+++ b/package.yaml
@@ -27,6 +27,7 @@ dependencies:
 - aeson >= 1.5 && < 1.6
 - bytestring >= 0.10 && < 0.11
 - containers >= 0.6 && < 0.7
+- filepath >= 1.4 && < 1.5
 
 ghc-options:
 - -Wall
